# the-bullpen

./: .editorconfig  .gitignore  .mailmap  .mcp.json  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SETUP-NEXT-STEPS.md  deploy.sh
training/: PITCH_MODEL_STATUS.md  README.md  pyproject.toml
training/data/: cross_park_sanity_report.json  observed_norm_factors.json  park_weather_defaults.json  physics_calibration.json  physics_validation_fixtures.json  physics_validation_report.json  published_hr_factors.json  retrodict_report_2015_2024.json  retrodict_report_2025.json  weather_backfill_2015_2025.json
training/data/eval/: batted_ball_comparison_v1.html  batted_ball_comparison_v1.json  battedball_backfill_accuracy_v1.json  comparison_all.json  pitch_post_backfill_accuracy_v1.json
training/data/eval/2026/: comparison_all.json
training/data/eval/pitch/: pitch_comparison.json
training/data/eval/pitch_advanced/: pitch_8model_comparison.json
training/data/eval/pitch_arsenal/: arsenal_comparison.json
training/data/eval/pitch_catcher/: catcher_experiment.json
training/data/eval/pitch_combined/: catcher.json  combined_experiment.json  hybrid_context.json
training/data/eval/pitch_enriched/: enriched_experiment.json
training/data/eval/pitch_final/: final_stage2.json  final_stage3.json
training/data/eval/pitch_research/: pitch_research_v2.json
training/data/eval/pitch_v3/: v3_experiment.json
training/data/eval/promotion/: batted_ball_mlp_experiment_results_full.json  batted_ball_mlp_experiment_results_full_per_park_isotonic.json  battedball_outcome_carry_promotion_gate.json  battedball_outcome_faithful_experiment_results_full.json  pitch_outcome_post_experiment_results_full.json  pitch_outcome_pre_experiment_results_full.json  pitch_outcome_pre_promotion_gate.json
training/scripts/: backfill_seasons.sh  backfill_seasons_parallel.sh  backfill_training_distributions.py  build_park_geometry.py  calibrate_fielder.py  calibrate_spin.py  chain_experiments.sh  compare_all_models.py  compare_all_pitch_models.py  compare_arsenal_models.py  compare_park_factors.py  compare_pitch_models.py  convert_calibrator_list_to_map.py  diagnose_cross_park_signal.py  emit_pre_promotion_gate.py  estimate_park_fences.py  export_post_folds.py  fetch_post_folds.py  final_stage1_embeddings.py  final_stage2_boosters.py  final_stage3_analysis.py  fit_calibrators.py  plot_final_comparison.py  repull_expanded.sh  run_2c9_comparison.py  run_2c_overnight.sh  run_battedball_backfill_accuracy.py  run_catcher_experiment.py  run_combined_experiment.py  run_enriched_experiment.py  run_final_experiments.py  run_final_experiments.sh  run_pitch_research.py  run_v3_experiment.py  setup_cuda_home.sh  train_catcher.py  train_hybrid_context.py
training/src/bullpen_training/: __init__.py  logging_config.py
training/src/bullpen_training/battedball/: __init__.py  export_toy_onnx.py  features_shared.py  features_toy.py  generate_ci_artifacts.py  parity_fixture.py  train_toy.py
training/src/bullpen_training/eval/: __init__.py  _plots.py  _segments.py  artifact.py  calibration.py  cv_harness.py  leakage_guards.py  metrics.py
training/src/bullpen_training/features/: __init__.py  pitch_type_features.py  target_encoding.py  tier_1_2.py  tier_3_form.py  tier_4_postpitch.py
training/src/bullpen_training/ingest/: __init__.py  assertions.py  clickhouse_client.py  migrations.py  statcast_pull.py  transform_pitches.py  weather.py  weather_backfill.py
training/src/bullpen_training/pitch/: __init__.py  export_lr_onnx.py  export_post_onnx.py  export_pre_onnx.py  fold_store.py  generate_ci_artifacts.py  isotonic.py  lgb_dataset.py  parity_fixture.py  parity_fixture_post.py  persist.py  production.py  register_fixtures.py  register_gate.py  register_pitch.py  register_snapshot.py  train_lr_baseline.py  train_post.py  train_pre.py
training/src/bullpen_training/pitch_comparison/: analysis.py  arsenal.py  combined_common.py  config.py  data.py  data_enriched.py  embedding_model.py  final_common.py  hierarchical_model.py  hybrid_model.py  load_combined.py  metrics.py  models.py  rookie_prototyping.py  sequence_data.py  sequence_data_v2.py  transformer_catcher.py  transformer_model.py  transformer_v2.py  transformer_v3.py
training/tests/: test_smoke.py
training/tests/battedball/: test_python_java_parity.py  test_retrodict_weather.py  test_train_toy.py
training/tests/eval/: test_artifact.py  test_calibration.py  test_cv_harness.py  test_ece_reconciliation.py  test_metrics.py
training/tests/features/: test_target_encoding.py  test_tier3_dsla_sanity.py  test_tier_1_2.py  test_tier_3_form.py  test_tier_4_postpitch.py
training/tests/fixtures/: parity_battedball_allparks_001.json  parity_battedball_allparks_001_expected.json  parity_pitch_post_001.json  parity_pitch_post_001_expected.json  parity_pitch_pre_001.json  parity_pitch_pre_001_expected.json  parity_toy_001.json  parity_toy_001_expected.json
training/tests/ingest/: test_clickhouse_client.py  test_migrations.py  test_statcast_pull.py  test_transform_pitches.py  test_weather.py
training/tests/leakage/: conftest.py  test_calendar_date_trace.py  test_holdout_fence.py  test_id_consistency.py  test_leakage_detector_properties.py  test_no_future_contamination.py  test_pitch_head_pre_post_boundary.py  test_pitch_type_sql_leakage.py  test_placeholder.py  test_shuffled_target.py  test_sql_path_contamination.py
training/tests/pitch/: test_fold_store.py  test_isotonic.py  test_python_java_parity_post.py  test_python_java_parity_pre.py  test_register_snapshot.py  test_train_lr.py  test_train_post.py  test_train_pre.py
training/tests/pitch_type/: test_export_onnx.py  test_loader.py  test_materialize_ch.py  test_production.py  test_temperature.py  test_train.py
training/tests/registry_client/: test_distributions.py  test_feature_hasher.py
training/tests/retraining/: test_api_client.py  test_batted_ball_dispatch.py  test_battedball_outcome_dispatch.py  test_dispatch.py  test_run.py
training/tests/scripts/: test_backfill_training_distributions.py
(+1242 files in other folders)
