[project]
name = "bullpen-training"
version = "0.1.0"
description = "Model training, evaluation, and ONNX export for The Bullpen."
requires-python = ">=3.11,<3.13"
dependencies = [
    "structlog>=24.4",
    "pandas>=2.2",
    "numpy>=2.0",
    "pyarrow>=18.1",
    "scikit-learn>=1.5",
    "lightgbm>=4.5",
    "onnx>=1.17",
    "onnxruntime>=1.20",
    "skl2onnx>=1.17",
    "pybaseball>=2.2.7",
    "clickhouse-driver>=0.2.10",
    "click>=8.4.1",
    "onnxmltools>=1.16.0",
    "numba>=0.65.1",
    "jsonschema>=4.26.0",
]

[dependency-groups]
dev = [
    "ruff>=0.8",
    "pyright>=1.1.391",
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "hypothesis>=6.122",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bullpen_training"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["artifacts"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]

[tool.pyright]
include = ["src", "eval", "tests"]
pythonVersion = "3.11"
# strict applies to modules where Unknown* would catch real bugs. The data
# subpackages (ingest/, eval/) wrap pandas/pybaseball/clickhouse-driver
# whose stubs are partial or absent — strict mode there is theatre, not
# safety. New non-data modules should add themselves to this list.
strict = [
    "src/bullpen_training/__init__.py",
    "src/bullpen_training/logging_config.py",
]
reportMissingTypeStubs = false
reportMissingImports = "warning"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
pythonpath = ["src"]

[tool.coverage.run]
source = ["src/bullpen_training"]
branch = true

[tool.coverage.report]
fail_under = 75
show_missing = true
