[project]
name = "bullpen-training"
version = "0.1.0"
description = "Model training, evaluation, and ONNX export for The Bullpen."
requires-python = ">=3.11,<3.13"
dependencies = [
    "structlog>=24.4",
    "pandas>=2.2",
    "numpy>=2.0",
    "pyarrow>=18.1",
    "scikit-learn>=1.5",
    "lightgbm>=4.5",
    "onnx>=1.17",
    "onnxruntime>=1.20",
    "skl2onnx>=1.17",
    "pybaseball>=2.2.7",
    "clickhouse-driver>=0.2.10",
    "click>=8.4.1",
    "onnxmltools>=1.16.0",
    "numba>=0.65.1",
    "jsonschema>=4.26.0",
    "torch>=2.12.0",
    "onnxscript>=0.7.0",
    "matplotlib>=3.10.9",
    "scipy>=1.17.1",
    "xgboost>=3.2.0",
    "umap-learn>=0.5.12",
    "shap>=0.50.0",
]

[dependency-groups]
dev = [
    "ruff>=0.8",
    "pyright>=1.1.391",
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "hypothesis>=6.122",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bullpen_training"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["artifacts"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]

[tool.pyright]
include = ["src", "eval", "tests"]
# pitch_comparison/ is the exploratory model-comparison research subpackage
# (transformer/embedding/arsenal studies that informed model selection) — not
# on the production train or serve path (pitch/, battedball/, eval/, ingest/
# are). It is pandas/torch-heavy with partial stubs, so basic-mode type checks
# there are the same "theatre, not safety" the strict-list comment describes —
# extended from strict to full exclusion for a non-production research module.
# The production pipeline stays fully type-checked.
exclude = ["src/bullpen_training/pitch_comparison"]
pythonVersion = "3.11"
# strict applies to modules where Unknown* would catch real bugs. The data
# subpackages (ingest/, eval/) wrap pandas/pybaseball/clickhouse-driver
# whose stubs are partial or absent — strict mode there is theatre, not
# safety. New non-data modules should add themselves to this list.
strict = [
    "src/bullpen_training/__init__.py",
    "src/bullpen_training/logging_config.py",
]
reportMissingTypeStubs = false
reportMissingImports = "warning"
# PyTorch's top-level stubs lazily expose torch.{device, from_numpy, allclose, ...}
# so pyright flags every legitimate use as `reportPrivateImportUsage`. The fix
# upstream is "use torch.* as published in the PyTorch docs"; ours is to silence
# the rule. Genuinely-missing attributes still trip reportAttributeAccessIssue.
reportPrivateImportUsage = false

[tool.pytest.ini_options]
testpaths = ["tests"]
# Skip @pytest.mark.production by default — those gates only pass against
# the full-data trained model; opt in with `pytest -m production`.
addopts = "-ra --strict-markers -m 'not production'"
pythonpath = ["src"]
markers = [
    "production: cross-park sanity gates that only run against the full-data trained model (decision [52])",
]

[tool.coverage.run]
source = ["src/bullpen_training"]
branch = true

[tool.coverage.report]
fail_under = 75
show_missing = true
