[project]
name = "bullpen-training"
version = "0.1.0"
description = "Model training, evaluation, and ONNX export for The Bullpen."
requires-python = ">=3.11,<3.13"
dependencies = [
    "structlog>=24.4",
    "pandas>=2.2",
    "numpy>=2.0",
    "pyarrow>=18.1",
    "scikit-learn>=1.5",
    "lightgbm>=4.5",
    "onnx>=1.17",
    "onnxruntime>=1.20",
    "skl2onnx>=1.17",
    "pybaseball>=2.2.7",
    "clickhouse-driver>=0.2.10",
    "click>=8.4.1",
    "onnxmltools>=1.16.0",
    "numba>=0.65.1",
    "jsonschema>=4.26.0",
    "torch>=2.12.0",
    "onnxscript>=0.7.0",
    "matplotlib>=3.10.9",
    "scipy>=1.17.1",
    "xgboost>=3.2.0",
    "umap-learn>=0.5.12",
    "shap>=0.50.0",
    "nvidia-cuda-nvcc-cu12==12.9.86 ; sys_platform == 'linux'",
    "boto3>=1.43.27",
]

[dependency-groups]
dev = [
    "ruff>=0.8",
    "pyright>=1.1.391",
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "hypothesis>=6.122",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bullpen_training"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["artifacts"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]

[tool.pyright]
# "eval" pointed at a non-existent top-level dir (the real code is
# src/bullpen_training/eval, already covered by "src"); dropped as stale.
include = ["src", "tests"]
# pitch_comparison/ is the exploratory model-comparison research subpackage
# (transformer/embedding/arsenal studies that informed model selection) — not
# on the production train or serve path (pitch/, battedball/, eval/, ingest/
# are). It is pandas/torch-heavy with partial stubs, so basic-mode type checks
# there are the same "theatre, not safety" the strict-list comment describes —
# extended from strict to full exclusion for a non-production research module.
# The production pipeline stays fully type-checked.
exclude = ["src/bullpen_training/pitch_comparison"]
pythonVersion = "3.11"
# strict applies to modules where Unknown* would catch real bugs. The data
# LOADERS in ingest/ + eval/ wrap pandas/pybaseball/clickhouse-driver whose
# stubs are partial or absent - strict there is theatre, not safety - but the
# pure-computation modules within eval/ (metrics, promotion criteria) and the
# stdlib-only registry_client/feature_hasher DO benefit, so they are
# strict-listed individually. cv_harness.py stays basic: it is a pandas
# DataFrame orchestrator, and reportMissingTypeStubs=false (no pandas-stubs, a
# deliberate project choice) means strict there is the same theatre. New
# non-data modules should add themselves here.
strict = [
    "src/bullpen_training/__init__.py",
    "src/bullpen_training/logging_config.py",
    "src/bullpen_training/eval/metrics.py",
    "src/bullpen_training/eval/promotion/criteria.py",
    "src/bullpen_training/registry_client/feature_hasher.py",
    "src/bullpen_training/pitch_type/temperature.py",
]
reportMissingTypeStubs = false
reportMissingImports = "warning"
# PyTorch's top-level stubs lazily expose torch.{device, from_numpy, allclose, ...}
# so pyright flags every legitimate use as `reportPrivateImportUsage`. The fix
# upstream is "use torch.* as published in the PyTorch docs"; ours is to silence
# the rule. Genuinely-missing attributes still trip reportAttributeAccessIssue.
reportPrivateImportUsage = false

[tool.pytest.ini_options]
testpaths = ["tests"]
# Skip @pytest.mark.production by default — those gates only pass against
# the full-data trained model; opt in with `pytest -m production`.
# Skip @pytest.mark.perf by default — throughput targets are hardware-specific
# (tuned on dev M-series) and flap on shared CI runners; opt in with `pytest -m perf`.
addopts = "-ra --strict-markers -m 'not production and not perf'"
pythonpath = ["src"]
markers = [
    "production: cross-park sanity gates that only run against the full-data trained model (decision [52])",
    "perf: hardware-specific throughput/latency targets; validated on dev hardware, not shared CI runners",
]

[tool.coverage.run]
source = ["src/bullpen_training"]
branch = true
omit = [
    # Exploratory model-comparison research (transformer/embedding/arsenal
    # studies that informed model selection) — not on the production train/serve
    # path and not under test, same scope as the pyright exclude. The production
    # pipeline (pitch/, battedball/, eval/, ingest/, features/) stays measured.
    "src/bullpen_training/pitch_comparison/*",
]

[tool.coverage.report]
# TARGET: 75% (StudyForesight parity). Current is ~50% line+branch — the gap is
# the recently-merged per-park dataset builders + training orchestration that
# shipped with smoke validation only. Reaching 75% is a deliberate test-writing
# pass (unit-test mlp/lgbm_per_park/dataset.py + eval/_segments + metrics +
# physics integrator first; smoke-test the trainers) layered in across the
# sprints — see docs/hardening/observations.md for the module-by-module plan.
#
# The CI step (.github/workflows/training.yml) currently reports the gap as a
# warning rather than failing the build, so green-main holds while coverage
# climbs. Flip that step to a hard gate once coverage actually clears 75.
fail_under = 75
show_missing = true
